# apps/server/src/routes/userRoutes.ts
@@ -38,6 +38,51 @@ router.get("/", authMiddleware(), async (_req: Request, res: Response) => {
   }
 });
 
+router.get(
+  "/tutors",
+  authMiddleware([EnumUserRole.ADMIN, EnumUserRole.APPRENTICE_COORDINATOR]),
+  async (req: Request, res: Response) => {
+    try {
+      logger.info(`Récupération des tuteurs`);
+      const result = await userController.getAllTutors();
+      logger.info(`Tuteurs récupérés`);
+      reply(res, result);
+    } catch (error: any) {
+      logger.error(`Erreur serveur : ${error.message}`);
+      reply(res, ControllerError.INTERNAL());
+    }
+  },
+);
+
+router.get(
+  "/mentors",
+  authMiddleware([EnumUserRole.ADMIN, EnumUserRole.APPRENTICE_COORDINATOR]),
+  async (req: Request, res: Response) => {
+    try {
+      logger.info(`Récupération des mentors`);
+      const result = await userController.getAllMentors();
+      logger.info(`Mentors récupérés`);
+      reply(res, result);
+    } catch (error: any) {
+      logger.error(`Erreur serveur : ${error.message}`);
+      reply(res, ControllerError.INTERNAL());
+    }
+  },
+);
+
+router.get("/apprentice/:id", authMiddleware(), async (req: Request, res: Response) => {
+  try {
+    const id = parseInt(req.params.id);
+    logger.info(`Récupération de l'apprenti ${id}`);
+    const result = await userController.getApprentice(id);
+    logger.info(`Apprenti ${id} récupéré`);
+    reply(res, result);
+  } catch (error: any) {
+    logger.error(`Erreur serveur : ${error.message}`);
+    reply(res, ControllerError.INTERNAL());
+  }
+});
+
 router.put(
   "/:id",
   authMiddleware([EnumUserRole.ADMIN, EnumUserRole.APPRENTICE_COORDINATOR]),
@@ -55,62 +100,6 @@ router.put(
     }
   },
 );
-
-router.get(
-  "/count",
-  authMiddleware([EnumUserRole.ADMIN, EnumUserRole.APPRENTICE_COORDINATOR]),
-  async (_req: Request, res: Response) => {
-    try {
-      logger.info("Récupération du nombre total d'utilisateurs");
-      const result = await userController.getCount();
-      logger.info("Nombre total d'utilisateurs récupéré");
-      reply(res, result);
-    } catch (error: any) {
-      logger.error(`Erreur serveur : ${error.message}`);
-      reply(res, ControllerError.INTERNAL());
-    }
-  },
-);
-
-router.get(
-  "/count/role",
-  authMiddleware([EnumUserRole.ADMIN, EnumUserRole.APPRENTICE_COORDINATOR]),
-  async (_req: Request, res: Response) => {
-    try {
-      logger.info("Récupération du nombre d'utilisateurs par rôle");
-      const result = await userController.getCountForRole();
-      logger.info("Nombre d'utilisateurs par rôle récupéré");
-      reply(res, result);
-    } catch (error: any) {
-      logger.error(`Erreur serveur : ${error.message}`);
-      reply(res, ControllerError.INTERNAL());
-    }
-  },
-);
-
-router.get("/tutors", authMiddleware(), async (req: Request, res: Response) => {
-  try {
-    logger.info(`Récupération des tuteurs`);
-    const result = await userController.getAllTutors();
-    logger.info(`Tuteurs récupérés`);
-    reply(res, result);
-  } catch (error: any) {
-    logger.error(`Erreur serveur : ${error.message}`);
-    reply(res, ControllerError.INTERNAL());
-  }
-});
-
-router.get("/mentors", authMiddleware(), async (req: Request, res: Response) => {
-  try {
-    logger.info(`Récupération des mentors`);
-    const result = await userController.getAllMentors();
-    logger.info(`Mentors récupérés`);
-    reply(res, result);
-  } catch (error: any) {
-    logger.error(`Erreur serveur : ${error.message}`);
-    reply(res, ControllerError.INTERNAL());
-  }
-});
 
 router.get("/:id", authMiddleware(), async (req: Request, res: Response) => {
   try {
@@ -142,42 +131,50 @@ router.delete(
   },
 );
 
-router.patch("/:id/password", authMiddleware(), async (req: CustomRequestUser, res: Response) => {
-  try {
-    const id = parseInt(req.params.id);
-    logger.info(`Modification du mot de passe de l'utilisateur ${id}`);
+router.patch(
+  "/:id/password",
+  authMiddleware([
+    EnumUserRole.ADMIN,
+    EnumUserRole.APPRENTICE_COORDINATOR,
+    EnumUserRole.APPRENTICE,
+  ]),
+  async (req: CustomRequestUser, res: Response) => {
+    try {
+      const id = parseInt(req.params.id);
+      logger.info(`Modification du mot de passe de l'utilisateur ${id}`);
 
-    if (!req.context.user) {
-      return reply(res, ControllerError.UNAUTHORIZED());
-    }
-    const roles = userService.getRoles(req.context.user);
+      if (!req.context.user) {
+        return reply(res, ControllerError.UNAUTHORIZED());
+      }
+      const roles = userService.getRoles(req.context.user);
 
-    if (req.context.user?.id !== id && !roles.includes(EnumUserRole.ADMIN)) {
-      return reply(res, ControllerError.UNAUTHORIZED());
-    }
+      if (req.context.user?.id !== id && !roles.includes(EnumUserRole.ADMIN)) {
+        return reply(res, ControllerError.UNAUTHORIZED());
+      }
 
-    const body = req.body;
-    if (roles.includes(EnumUserRole.ADMIN)) {
-      const result = await userController.updatePasswordAdmin(
-        id,
-        body.password,
-        body.confirmPassword,
-      );
-      return reply(res, result);
-    } else {
-      const result = await userController.updatePasswordUser(
-        id,
-        body.password,
-        body.confirmPassword,
-        body.currentPassword,
-      );
-      return reply(res, result);
+      const body = req.body;
+      if (roles.includes(EnumUserRole.ADMIN)) {
+        const result = await userController.updatePasswordAdmin(
+          id,
+          body.password,
+          body.confirmPassword,
+        );
+        return reply(res, result);
+      } else {
+        const result = await userController.updatePasswordUser(
+          id,
+          body.password,
+          body.confirmPassword,
+          body.currentPassword,
+        );
+        return reply(res, result);
+      }
+    } catch (error) {
+      console.error(error);
+      reply(res, ControllerError.INTERNAL());
     }
-  } catch (error) {
-    console.error(error);
-    reply(res, ControllerError.INTERNAL());
-  }
-});
+  },
+);
 
 router.get("/:id/groups", authMiddleware(), async (req: CustomRequestUser, res: Response) => {
   try {
@@ -262,18 +259,5 @@ router.patch(
     }
   },
 );
-
-router.get("/apprentice/:id", authMiddleware(), async (req: Request, res: Response) => {
-  try {
-    const id = parseInt(req.params.id);
-    logger.info(`Récupération de l'apprenti ${id}`);
-    const result = await userController.getApprentice(id);
-    logger.info(`Apprenti ${id} récupéré`);
-    reply(res, result);
-  } catch (error: any) {
-    logger.error(`Erreur serveur : ${error.message}`);
-    reply(res, ControllerError.INTERNAL());
-  }
-});
 
 export default router;
